--- a/app/src/main/res/layout/fragment_paciente.xml
+++ b/app/src/main/res/layout/fragment_paciente.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <EditText
+    <TextView
         android:id="@+id/alturaText"
         android:layout_width="143dp"
         android:layout_height="39dp"
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <EditText
+    <TextView
         android:id="@+id/idadeText"
         android:layout_width="143dp"
         android:layout_height="39dp"
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <EditText
+    <TextView
         android:id="@+id/tipoSanguineoText"
         android:layout_width="144dp"
         android:layout_height="40dp"
@@ -76,7 +76,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <EditText
+    <TextView
         android:id="@+id/alergiaText"
         android:layout_width="144dp"
         android:layout_height="40dp"
@@ -94,7 +94,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <EditText
+    <TextView
         android:id="@+id/textNome"
         android:layout_width="116dp"
         android:layout_height="38dp"
@@ -127,7 +127,7 @@
         app:layout_constraintVertical_bias="0.156"
         app:srcCompat="@drawable/btmore" />
 
-    <EditText
+    <TextView
         android:id="@+id/obsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
