--- a/app/src/main/res/layout/fragment_paciente.xml
+++ b/app/src/main/res/layout/fragment_paciente.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
+    <EditText
         android:id="@+id/alturaText"
         android:layout_width="143dp"
         android:layout_height="39dp"
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
+    <EditText
         android:id="@+id/idadeText"
         android:layout_width="143dp"
         android:layout_height="39dp"
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
+    <EditText
         android:id="@+id/tipoSanguineoText"
         android:layout_width="144dp"
         android:layout_height="40dp"
@@ -76,7 +76,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
+    <EditText
         android:id="@+id/alergiaText"
         android:layout_width="144dp"
         android:layout_height="40dp"
@@ -94,7 +94,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
+    <EditText
         android:id="@+id/textNome"
         android:layout_width="116dp"
         android:layout_height="38dp"
@@ -127,7 +127,7 @@
         app:layout_constraintVertical_bias="0.156"
         app:srcCompat="@drawable/btmore" />
 
-    <TextView
+    <EditText
         android:id="@+id/obsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -161,22 +161,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/btSave"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="258dp"
-        android:layout_marginTop="77dp"
-        android:layout_marginEnd="131dp"
-        android:layout_marginBottom="631dp"
-        android:background="@android:color/transparent"
-        android:scaleType="fitXY"
-        android:src="@drawable/save"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
         android:id="@+id/btTrash"
         android:layout_width="25dp"
         android:layout_height="25dp"
@@ -191,6 +175,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <ImageButton
+        android:id="@+id/btEdit"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="77dp"
+        android:layout_marginBottom="631dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        android:src="@drawable/edit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.704"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:src="@drawable/edit" />
 
     <ImageView
         android:id="@+id/imageView32"
