--- a/app/src/main/res/layout/activity_tela_cadastro.xml
+++ b/app/src/main/res/layout/activity_tela_cadastro.xml
@@ -30,8 +30,8 @@
         android:layout_marginEnd="94dp"
         android:layout_marginBottom="314dp"
         android:ems="10"
+        android:hint="Senha"
         android:inputType="textPassword"
-        android:text="Senha"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,8 +46,8 @@
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="452dp"
         android:ems="10"
+        android:hint="Email"
         android:inputType="textEmailAddress"
-        android:text="Email:"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -92,12 +92,14 @@
         android:layout_marginEnd="93dp"
         android:layout_marginBottom="383dp"
         android:ems="10"
+        android:hint="Usuário"
         android:inputType="text"
-        android:text="Usuário"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btCadastrarCadastro"
