--- a/app/src/main/res/layout/activity_tela_login.xml
+++ b/app/src/main/res/layout/activity_tela_login.xml
@@ -84,8 +84,8 @@
         android:layout_marginBottom="446dp"
         android:ems="10"
         android:fontFamily="@font/montserrat"
+        android:hint="Email"
         android:inputType="textEmailAddress"
-        android:text="Email: "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.536"
@@ -101,6 +101,7 @@
         android:layout_marginEnd="95dp"
         android:layout_marginBottom="376dp"
         android:ems="10"
+        android:hint="Senha"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
