--- a/app/src/main/res/layout/activity_tela_cadastro.xml
+++ b/app/src/main/res/layout/activity_tela_cadastro.xml
@@ -8,18 +8,60 @@
     tools:context=".TelaCadastro">
 
     <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="-150dp"
+        android:layout_marginTop="-700dp"
+        android:rotation="90"
+        android:src="@drawable/plmds" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="192dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="107dp"
+        android:layout_marginTop="158dp"
+        android:layout_marginEnd="82dp"
+        android:layout_marginBottom="536dp"
+        android:fontFamily="@font/adlam_display"
+        android:text="Crie uma conta!"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.433"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginBottom="65dp"
+        android:layout_width="117dp"
+        android:layout_height="148dp"
+        android:layout_marginStart="147dp"
+        android:layout_marginEnd="147dp"
+        android:layout_marginBottom="583dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/red" />
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/iconlogo" />
+
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="696dp"
+        android:layout_marginEnd="175dp"
+        android:layout_marginBottom="16dp"
+        android:text="Care.Plus"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/campoSenhaCadastro"
@@ -54,19 +96,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="223dp"
-        android:rotationY="180"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.09"
-        app:srcCompat="@drawable/blue" />
 
     <ImageView
         android:id="@+id/imageView5"
@@ -115,6 +144,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="1012dp"
+        android:layout_height="829dp"
+        android:layout_marginTop="264dp"
+        android:rotation="-90"
+        android:src="@drawable/plmds"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="-253dp"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView"
